--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,8 +9,14 @@ body {
 	padding: 10px;
 	margin: 0;
 }
+
+a{
+	text-decoration: none;
+	color:inherit;
+}
+
 h1 {
-	font-size: 15pt;
+	font-size: 20pt;
 	color: #20bcd5;
 	text-align: center;
 	padding: 18px 0 18px 0;
@@ -21,8 +27,17 @@ h1 span {
 	padding: 10px;
 }
 p {
-	padding: 0;
-	margin: 0;
+	position: relative;
+	text-align: center;
+	font-size: 30px;
+	font-family: 'Megrim', cursive;
+	text-shadow:
+				0 0 5px #0bf4f3,
+				0 0 10px #0bf4f3,
+				0 0 20px #0bf4f3,
+				0 0 40px #0bf4f3,
+				0 0 80px #0bf4f3;
+
 }
 .img-circle {
 	border: 3px solid white;
@@ -86,7 +101,7 @@ progress::-webkit-progress-bar {
 }
 progress::-webkit-progress-value {
 	background: #3fb6b2;
-} 
+}
 progress::-moz-progress-bar {
 	color: #3fb6b2;
 	background: #efefef;
@@ -156,8 +171,8 @@ input, textarea {
 	text-align: center;
 }
 .copyright {
-	font-size: 8pt;
-	text-align: right;
+	font-size: 15pt;
+	text-align: left;
 	padding-bottom: 10px;
-	color: grey;
+
 }
